Update Stream settings UI.

--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -319,5 +319,7 @@
   "Your stream has successfully switched to Streamlabs Mobile.": "Your stream has successfully switched to Streamlabs Mobile.",
   "Stream Information:": "Stream Information:",
   "Destinations:": "Destinations:",
-  "Destinations & Outputs:": "Destinations & Outputs:"
+  "Destinations & Outputs:": "Destinations & Outputs:",
+  "Upgrade to Ultra to stream to multiple platforms simultaneously!": "Upgrade to Ultra to stream to multiple platforms simultaneously!",
+  "Add More": "Add More"
 }
