Bug fixes and polishes.

--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -306,8 +306,7 @@
   "AI Highlighter is enabled. Recording will start when stream starts.": "AI Highlighter is enabled. Recording will start when stream starts.",
   "Connection Failed": "Connection Failed",
   "Upgrade to Ultra to allow more than two outputs": "Upgrade to Ultra to allow more than two outputs",
-  "Enable Stream Switcher": "Enable Stream Switcher",
-  "Disable Stream Switcher": "Disable Stream Switcher",
+  "Toggle Stream Switcher": "Toggle Stream Switcher",
   "Toggle to swap your stream between Desktop and Mobile devices.": "Toggle to swap your stream between Desktop and Mobile devices.",
   "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra": "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra",
   "Switch Stream": "Switch Stream",
