--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -307,7 +307,7 @@
   "Connection Failed": "Connection Failed",
   "Upgrade to Ultra to allow more than two outputs": "Upgrade to Ultra to allow more than two outputs",
   "Toggle Stream Switcher": "Toggle Stream Switcher",
-  "Toggle to swap your stream between Desktop and Mobile devices.": "Toggle to swap your stream between Desktop and Mobile devices.",
+  "Stay uninterrupted by switching between devices mid stream. Works between Desktop, Mobile App & Console.": "Stay uninterrupted by switching between devices mid stream. Works between Desktop, Mobile App & Console.",
   "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra": "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra",
   "Switch Stream": "Switch Stream",
   "Claim Stream": "Claim Stream",
@@ -321,5 +321,10 @@
   "Destinations & Outputs:": "Destinations & Outputs:",
   "Upgrade to Ultra to stream to multiple platforms simultaneously!": "Upgrade to Ultra to stream to multiple platforms simultaneously!",
   "Add More": "Add More",
-  "Multichat": "Multichat"
+  "Multichat": "Multichat",
+  "Toggle %{platform}": "Toggle %{platform}",
+  "Toggle Destination": "Toggle Destination",
+  "Share your stream!": "Share your stream!",
+  "Stream Switcher cannot be used with Dual Output": "Stream Switcher cannot be used with Dual Output",
+  "Dual Output cannot be used with Stream Switcher": "Dual Output cannot be used with Stream Switcher"
 }
