--- a/app/i18n/en-US/stream-switcher.json
+++ b/app/i18n/en-US/stream-switcher.json
@@ -12,5 +12,6 @@
   "Your stream has been switched to Streamlabs Mobile. Ending the stream on Streamlabs Desktop.": "Your stream has been switched to Streamlabs Mobile. Ending the stream on Streamlabs Desktop.",
   "Your stream has been successfully switched to Streamlabs Desktop. \n\nEnjoy your stream!": "Your stream has been successfully switched to Streamlabs Desktop. \n\nEnjoy your stream!",
   "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.": "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.",
-  "Switch to Streamlabs Desktop": "Switch to Streamlabs Desktop"
+  "Switch to Streamlabs Desktop": "Switch to Streamlabs Desktop",
+  "Upgrade to Ultra to switch streams between devices.": "Upgrade to Ultra to switch streams between devices."
 }
