--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -316,5 +316,9 @@
   "Toggle Destination": "Toggle Destination",
   "Share your stream!": "Share your stream!",
   "You've selected the two streaming destinations. Disable a destination to enable a different one. \nYou can always upgrade to Ultra for multistreaming.": "You've selected the two streaming destinations. Disable a destination to enable a different one. \nYou can always upgrade to Ultra for multistreaming.",
-  "Stream both horizontally and vertically to %{platform}": "Stream both horizontally and vertically to %{platform}"
+  "Stream both horizontally and vertically to %{platform}": "Stream both horizontally and vertically to %{platform}",
+  "Cannot change displays while live.": "Cannot change displays while live.",
+  "Stream switcher cannot be used in dual output mode.": "Stream switcher cannot be used in dual output mode.",
+  "Cannot toggle dual output in Studio Mode.": "Cannot toggle dual output in Studio Mode.",
+  "Dual Output will be disabled since not supported in this mode.": "Dual Output will be disabled since not supported in this mode."
 }
