--- a/app/i18n/en-US/promotional-copy.json
+++ b/app/i18n/en-US/promotional-copy.json
@@ -74,5 +74,6 @@
   "Text-based editing of VOD content": "Text-based editing of VOD content",
   "Polish your videos with text-based and AI powered Podcast Editor": "Polish your videos with text-based and AI powered Podcast Editor",
   "Turn your videos into mobile-friendly short-form TikToks, Reels, and Shorts with Cross Clip": "Turn your videos into mobile-friendly short-form TikToks, Reels, and Shorts with Cross Clip",
-  "Edit video professionally from your browser with Video Editor": "Edit video professionally from your browser with Video Editor"
+  "Edit video professionally from your browser with Video Editor": "Edit video professionally from your browser with Video Editor",
+  "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.": "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes."
 }
