--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -276,5 +276,9 @@
   "Bearer Token": "Bearer Token",
   "Apply Primary": "Apply Primary",
   "Output Resolution": "Output Resolution",
-  "Unable to start Dual Output, update your Stream Settings to \"Use Recommended Settings\"": "Unable to start Dual Output, update your Stream Settings to \"Use Recommended Settings\""
+  "Unable to start Dual Output, update your Stream Settings to \"Use Recommended Settings\"": "Unable to start Dual Output, update your Stream Settings to \"Use Recommended Settings\"",
+  "Mobile": "Mobile",
+  "Mobile Streaming": "Mobile Streaming",
+  "Remote Controller": "Remote Controller",
+  "Third Party Connections": "Third Party Connections"
 }
