--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -434,5 +434,7 @@
   "Virtual camera output type": "Virtual camera output type",
   "Unmute your Microphone source in Mixer": "Unmute your Microphone source in Mixer",
   "Your Microphone is unmuted but has no signal": "Your Microphone is unmuted but has no signal",
-  "Search...": "Search..."
+  "Search...": "Search...",
+  "Virtual Cam": "Virtual Cam",
+  "Virtual Cam Error": "Virtual Cam Error"
 }
