Add copy to mobile settings section

--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -280,5 +280,6 @@
   "Mobile": "Mobile",
   "Mobile Streaming": "Mobile Streaming",
   "Remote Controller": "Remote Controller",
-  "Third Party Connections": "Third Party Connections"
+  "Third Party Connections": "Third Party Connections",
+  "Stream your phone camera or mobile game on the go with Streamlabs Mobile App.": "Stream your phone camera or mobile game on the go with Streamlabs Mobile App."
 }
