attempt to improve category typing

--- a/app/i18n/en-US/common.json
+++ b/app/i18n/en-US/common.json
@@ -169,5 +169,6 @@
   "Dashboard Home": "Dashboard Home",
   "Alert Box Library": "Alert Box Library",
   "Alert Box Settings": "Alert Box Settings",
-  "Alerts and Widgets": "Alerts and Widgets"
+  "Alerts and Widgets": "Alerts and Widgets",
+  "AI": "AI"
 }
