--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -433,5 +433,10 @@
   "Virtual camera output selection": "Virtual camera output selection",
   "Virtual camera output type": "Virtual camera output type",
   "Unmute your Microphone source in Mixer": "Unmute your Microphone source in Mixer",
-  "Your Microphone is unmuted but has no signal": "Your Microphone is unmuted but has no signal"
+  "Your Microphone is unmuted but has no signal": "Your Microphone is unmuted but has no signal",
+  "Victory & Defeat": "Victory & Defeat",
+  "Dynamic game animation": "Dynamic game animation",
+  "Dynamic real time animation based on your game & widget events.  Streamlabs Vision powered events include:": "Dynamic real time animation based on your game & widget events.  Streamlabs Vision powered events include:",
+  "Kills & Eliminations": "Kills & Eliminations",
+  "Health changes": "Health changes"
 }
