--- a/app/i18n/en-US/widget-sponsor-banner.json
+++ b/app/i18n/en-US/widget-sponsor-banner.json
@@ -22,5 +22,6 @@
   "Placement %{number} Images": "Placement %{number} Images",
   "No Image": "No Image",
   "Set up a sponsor banner to be able to edit (add, remove, update) rotating sponsor logos on streamer channel.": "Set up a sponsor banner to be able to edit (add, remove, update) rotating sponsor logos on streamer channel.",
-  "Show off rotating media to display your socials, sponsorships, CTAs or just cute animations.": "Show off rotating media to display your socials, sponsorships, CTAs or just cute animations."
+  "Show off rotating media to display your socials, sponsorships, CTAs or just cute animations.": "Show off rotating media to display your socials, sponsorships, CTAs or just cute animations.",
+  "The duration must be in the format [minutes]:[seconds] (i.e. 02:05)": "The duration must be in the format [minutes]:[seconds] (i.e. 02:05)"
 }
