--- a/app/i18n/en-US/promotional-copy.json
+++ b/app/i18n/en-US/promotional-copy.json
@@ -77,5 +77,6 @@
   "Edit video professionally from your browser with Video Editor": "Edit video professionally from your browser with Video Editor",
   "What's New": "What's New",
   "New Updates to Streamlabs Desktop": "New Updates to Streamlabs Desktop",
-  "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.": "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes."
+  "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.": "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.",
+  "Enjoy all the benefits of Streamlab’s Background Removal filter plus multistreaming, cloud shift, overlays and more by going Ultra.": "Enjoy all the benefits of Streamlab’s Background Removal filter plus multistreaming, cloud shift, overlays and more by going Ultra."
 }
