updated widget description and stop widget when stream is offline

--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -189,8 +189,9 @@
   "Include text into your stream, such as follower count, latest tip, last sub and more.": "Include text into your stream, such as follower count, latest tip, last sub and more.",
   "Automatically plays your most recently captured replay in your stream.": "Automatically plays your most recently captured replay in your stream.",
   "Highlight Reel": "Highlight Reel",
-  "Display highlight clips": "Display highlight clips",
+  "Display AI Highlighter clips": "Display AI Highlighter clips",
   "Automatically display the latest clips captured with AI Highlighter.": "Automatically display the latest clips captured with AI Highlighter.",
+  "AI Highlighter must be activated in the go live flow for this widget to work.": "AI Highlighter must be activated in the go live flow for this widget to work.",
   "New filter": "New filter",
   "Third party widgets": "Third party widgets",
   "OpenVR Capture": "OpenVR Capture",
