Improve handling unknown error with message and allow going live to YouTube with thumbnail upload failed.

--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -439,5 +439,7 @@
   "Dynamic real time animation based on your game & widget events.  Streamlabs Vision powered events include:": "Dynamic real time animation based on your game & widget events.  Streamlabs Vision powered events include:",
   "Kills & Eliminations": "Kills & Eliminations",
   "Health changes": "Health changes",
-  "Search...": "Search..."
+  "Search...": "Search...",
+  "Virtual Cam": "Virtual Cam",
+  "Virtual Cam Error": "Virtual Cam Error"
 }
