--- a/app/i18n/en-US/youtube.json
+++ b/app/i18n/en-US/youtube.json
@@ -45,5 +45,7 @@
   "Thumbnail file does not include image content.": "Thumbnail file does not include image content.",
   "Permission missing to upload thumbnails.": "Permission missing to upload thumbnails.",
   "Video does not exist. Thumbnail upload failed.": "Video does not exist. Thumbnail upload failed.",
-  "Exceeded thumbnail upload quota. Please try again later.": "Exceeded thumbnail upload quota. Please try again later."
+  "Exceeded thumbnail upload quota. Please try again later.": "Exceeded thumbnail upload quota. Please try again later.",
+  "YouTube thumbnail image is too large. Maximum size is 2MB.": "YouTube thumbnail image is too large. Maximum size is 2MB.",
+  "Please upload thumbnail manually on YouTube.": "Please upload thumbnail manually on YouTube."
 }
