Use api to update cloud shift settings and add YouTube stop stream failsafe.

--- a/app/i18n/en-US/cloud-shift.json
+++ b/app/i18n/en-US/cloud-shift.json
@@ -1,7 +1,7 @@
 {
   "Cloud Shift": "Cloud Shift",
   "Toggle Cloud Shift": "Toggle Cloud Shift",
-  "Stay uninterrupted by switching between devices mid stream. Works between Desktop, Mobile App & Console.": "Stay uninterrupted by switching between devices mid stream. Works between Desktop, Mobile App & Console.",
+  "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.": "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.",
   "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra": "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra",
   "Switch Stream": "Switch Stream",
   "Claim Stream": "Claim Stream",
