Change to stream shift.

--- a/app/i18n/en-US/cloud-shift.json
+++ b/app/i18n/en-US/cloud-shift.json
@@ -1,14 +1,14 @@
 {
-  "Cloud Shift": "Cloud Shift",
-  "Toggle Cloud Shift": "Toggle Cloud Shift",
+  "Stream Shift": "Stream Shift",
+  "Toggle Stream Shift": "Toggle Stream Shift",
   "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.": "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.",
   "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra": "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra",
   "Switch Stream": "Switch Stream",
   "Claim Stream": "Claim Stream",
   "Another stream detected": "Another stream detected",
   "Stream successfully switched": "Stream successfully switched",
-  "Cloud Shift cannot be used with Dual Output": "Cloud Shift cannot be used with Dual Output",
-  "Dual Output cannot be used with Cloud Shift": "Dual Output cannot be used with Cloud Shift",
+  "Stream Shift cannot be used with Dual Output": "Stream Shift cannot be used with Dual Output",
+  "Dual Output cannot be used with Stream Shift": "Dual Output cannot be used with Stream Shift",
   "Your stream has been switched to Streamlabs Mobile. Ending the stream on Streamlabs Desktop.": "Your stream has been switched to Streamlabs Mobile. Ending the stream on Streamlabs Desktop.",
   "Your stream has been successfully switched to Streamlabs Desktop. \n\nEnjoy your stream!": "Your stream has been successfully switched to Streamlabs Desktop. \n\nEnjoy your stream!",
   "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.": "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.",
