--- a/app/i18n/en-US/twitter.json
+++ b/app/i18n/en-US/twitter.json
@@ -21,5 +21,6 @@
   "Subscriber Only": "Subscriber Only",
   "Only viewers that subscribe to you will be able to chat": "Only viewers that subscribe to you will be able to chat",
   "You need X premium account to go live on X.": "You need X premium account to go live on X.",
-  "You need X premium account to go live on X. Click to learn more": "You need X premium account to go live on X. Click to learn more"
+  "You need X premium account to go live on X. Click to learn more": "You need X premium account to go live on X. Click to learn more",
+  "Stream Shift Error: Twitter is not live": "Stream Shift Error: Twitter is not live"
 }
