--- a/app/i18n/en-US/kick.json
+++ b/app/i18n/en-US/kick.json
@@ -10,5 +10,6 @@
   "Go to: <link></link>": "Go to: <link></link>",
   "Click on the \"eye\" icon to see your stream key": "Click on the \"eye\" icon to see your stream key",
   "Put in 2FA": "Put in 2FA",
-  "After 2FA, the stream key has been generated and will be available for Streamlabs Desktop for that channel. You should now be able to go live on Kick.": "After 2FA, the stream key has been generated and will be available for Streamlabs Desktop for that channel. You should now be able to go live on Kick."
+  "After 2FA, the stream key has been generated and will be available for Streamlabs Desktop for that channel. You should now be able to go live on Kick.": "After 2FA, the stream key has been generated and will be available for Streamlabs Desktop for that channel. You should now be able to go live on Kick.",
+  "Stream Shift Error: Kick is not live": "Stream Shift Error: Kick is not live"
 }
