--- a/app/i18n/en-US/trovo.json
+++ b/app/i18n/en-US/trovo.json
@@ -7,5 +7,6 @@
   "Plays an alert for new Trovo followers": "Plays an alert for new Trovo followers",
   "Plays an alert for new Trovo subscriptions": "Plays an alert for new Trovo subscriptions",
   "Trovo Resubs": "Trovo Resubs",
-  "Trovo Subs": "Trovo Subs"
+  "Trovo Subs": "Trovo Subs",
+  "Stream Shift Error: Trovo is not live": "Stream Shift Error: Trovo is not live"
 }
