--- a/app/i18n/en-US/youtube.json
+++ b/app/i18n/en-US/youtube.json
@@ -47,6 +47,5 @@
   "Video does not exist. Thumbnail upload failed.": "Video does not exist. Thumbnail upload failed.",
   "Exceeded thumbnail upload quota. Please try again later.": "Exceeded thumbnail upload quota. Please try again later.",
   "YouTube thumbnail image is too large. Maximum size is 2MB.": "YouTube thumbnail image is too large. Maximum size is 2MB.",
-  "Please upload thumbnail manually on YouTube.": "Please upload thumbnail manually on YouTube.",
-  "Stream Shift Error: YouTube is not live": "Stream Shift Error: YouTube is not live"
+  "Please upload thumbnail manually on YouTube.": "Please upload thumbnail manually on YouTube."
 }
