--- a/app/i18n/en-US/stream-shift.json
+++ b/app/i18n/en-US/stream-shift.json
@@ -9,9 +9,8 @@
   "Stream successfully switched": "Stream successfully switched",
   "Stream Shift cannot be used with Dual Output": "Stream Shift cannot be used with Dual Output",
   "Dual Output cannot be used with Stream Shift": "Dual Output cannot be used with Stream Shift",
-  "Your stream has been switched to Streamlabs Mobile. The stream has ended on Streamlabs Desktop.": "Your stream has been switched to Streamlabs Mobile. The stream has ended on Streamlabs Desktop.",
-  "Your stream has been switched to Streamlabs Desktop on another device. The stream has ended on this device.": "Your stream has been switched to Streamlabs Desktop on another device. The stream has ended on this device.",
   "Your stream has been successfully switched to Streamlabs Desktop. Enjoy your stream!": "Your stream has been successfully switched to Streamlabs Desktop. Enjoy your stream!",
+  "Your stream has been switched to Streamlabs Desktop from another device. Enjoy your stream!": "Your stream has been switched to Streamlabs Desktop from another device. Enjoy your stream!",
   "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.": "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source.",
   "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source. Dual Output will be disabled since not supported in this mode.": "A stream on another device has been detected. Would you like to switch your stream to Streamlabs Desktop? If you do not wish to continue this stream, please end it from the current streaming source. Dual Output will be disabled since not supported in this mode.",
   "Switch to Streamlabs Desktop": "Switch to Streamlabs Desktop",
