--- a/app/i18n/en-US/filters.json
+++ b/app/i18n/en-US/filters.json
@@ -16,6 +16,7 @@
   "Compressor": "Compressor",
   "VST 2.x Plugin": "VST 2.x Plugin",
   "Background Removal": "Background Removal",
+  "Modify Appearence": "Modify Appearence",
   "Face Mask Plugin": "Face Mask Plugin",
   "Filter type": "Filter type",
   "Filter name": "Filter name",
