--- a/app/i18n/en-US/promotional-copy.json
+++ b/app/i18n/en-US/promotional-copy.json
@@ -77,5 +77,7 @@
   "Edit video professionally from your browser with Video Editor": "Edit video professionally from your browser with Video Editor",
   "What's New": "What's New",
   "New Updates to Streamlabs Desktop": "New Updates to Streamlabs Desktop",
-  "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.": "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes."
+  "Go Ultra and do more!": "Go Ultra and do more!",
+  "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.": "Enjoy your Ultra membership benefits on mobile including Multistream, Disconnect protection and premium themes.",
+  "Switch between your Desktop and Mobile stream without going offline with Stream Shift.": "Switch between your Desktop and Mobile stream without going offline with Stream Shift."
 }
