initial work on reactive data editor

--- a/app/i18n/en-US/common.json
+++ b/app/i18n/en-US/common.json
@@ -170,5 +170,8 @@
   "Alert Box Library": "Alert Box Library",
   "Alert Box Settings": "Alert Box Settings",
   "Alerts and Widgets": "Alerts and Widgets",
-  "AI": "AI"
+  "AI": "AI",
+  "Edit Data": "Edit Data",
+  "Edit Reactive Data": "Edit Reactive Data",
+  "Reactive Data Editor": "Reactive Data Editor"
 }
