Update copy and fix translation.

--- a/app/i18n/en-US/stream-shift.json
+++ b/app/i18n/en-US/stream-shift.json
@@ -2,7 +2,7 @@
   "Stream Shift": "Stream Shift",
   "Toggle Stream Shift": "Toggle Stream Shift",
   "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.": "Stay uninterrupted by switching between devices mid stream. Works between Desktop and Mobile App.",
-  "You can stream to any 2 destinations for free wiStream to 1 horizontal and vertical destination for free with Dual Output, or go Ultra for unlimited multistreaming to unlimited destinations.": "You can stream to any 2 destinations for free with Dual Output. Multistream and switch seamlessly between streams with Ultra",
+  "Stream to 1 horizontal and vertical destination for free with Dual Output, or go Ultra for unlimited multistreaming to unlimited destinations. <ultra>Upgrade now</ultra>": "Stream to 1 horizontal and vertical destination for free with Dual Output, or go Ultra for unlimited multistreaming to unlimited destinations. <ultra>Upgrade now</ultra>",
   "Switch Stream": "Switch Stream",
   "Claim Stream": "Claim Stream",
   "Another stream detected": "Another stream detected",
