--- a/app/i18n/en-US/onboarding.json
+++ b/app/i18n/en-US/onboarding.json
@@ -217,14 +217,12 @@
   "Save your settings in the cloud so your scenes and sources are secure and can be used anywhere you are.": "Save your settings in the cloud so your scenes and sources are secure and can be used anywhere you are.",
   "Show off your gameplay stats in real-time with our premium AI powered reactive overlays.": "Show off your gameplay stats in real-time with our premium AI powered reactive overlays.",
   "Sign in for the Best Recording Experience": "Sign in for the Best Recording Experience",
-  "Don't have an account?": "Don't have an account?",
-  "Create one": "Create one",
+  "Don't have an account? <link>Create one</link>": "Don't have an account? <link>Create one</link>",
   "Welcome to Streamlabs Desktop": "Welcome to Streamlabs Desktop",
   "Access all the tools you need, including overlays, alerts, automatic clips, sponsorships, and more": "Access all the tools you need, including overlays, alerts, automatic clips, sponsorships, and more",
   "Create an account": "Create an account",
-  "Already have an account?": "Already have an account?",
-  "Just looking to record?": "Just looking to record?",
-  "Start here": "Start here",
+  "Already have an account? <link>Log In</link>": "Already have an account? <link>Log In</link>",
+  "Just looking to record? <link>Start here</link>": "Just looking to record? <link>Start here</link>",
   "Choose Your Overlay": "Choose Your Overlay",
   "Browse All Overlays": "Browse All Overlays",
   "AI-powered reactions to in-game events": "AI-powered reactions to in-game events",
