--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -287,7 +287,7 @@
   "Incompatible Codec Detected": "Incompatible Codec Detected",
   "Use H.264 Codec": "Use H.264 Codec",
   "Select Codec": "Select Codec",
-  "AV1 codec is not supported for Multistream. Would you like to proceed with the H.264 codec or select another codec?": "AV1 codec is not supported for Multistream. Would you like to proceed with the H.264 codec or select another codec?",
-  "AV1 codec is not supported for Stream Shift. Would you like to proceed with the H.264 codec or select another codec?": "AV1 codec is not supported for Stream Shift. Would you like to proceed with the H.264 codec or select another codec?",
-  "AV1 codec is not supported for Dual Output. Would you like to proceed with the H.264 codec or select another codec?": "AV1 codec is not supported for Dual Output. Would you like to proceed with the H.264 codec or select another codec?"
+  "%{videoCodec} codec is not supported for Multistream. Would you like to proceed with the H.264 codec or select another codec?": "%{videoCodec} codec is not supported for Multistream. Would you like to proceed with the H.264 codec or select another codec?",
+  "%{videoCodec} codec is not supported for Stream Shift. Would you like to proceed with the H.264 codec or select another codec?": "%{videoCodec} codec is not supported for Stream Shift. Would you like to proceed with the H.264 codec or select another codec?",
+  "%{videoCodec} codec is not supported for Dual Output. Would you like to proceed with the H.264 codec or select another codec?": "%{videoCodec} codec is not supported for Dual Output. Would you like to proceed with the H.264 codec or select another codec?"
 }
